cleaned up code, fixed some spacing issues and add comments for JS file

--- a/pokedex.css
+++ b/pokedex.css
@@ -32,6 +32,7 @@ label {
   width: 220px;
   height: 640px;
   padding-left: 10px;
+  padding-top: 12px;
   border-width: 20px 20px 40px 20px;
   border-style:solid;
   border-color: red;
